--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
         "<all_urls>"
       ],
       "js": [
-        "https://code.jquery.com/jquery-2.1.1.min.js",
+        "./js/lib/jquery-2.1.1.min.js",
         "content-script.js"
       ]
     }
