--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,15 @@
         "./js/lib/jquery-2.1.1.min.js",
         "content-script.js"
       ]
+    },
+    {
+      "matches": [
+        "http://qiita.com/drafts/new*"
+      ],
+      "js": [
+        "./js/lib/jquery-2.1.1.min.js",
+        "post.js"
+      ]
     }
   ],
   "web_accessible_resources": [
